2003-11-24  graydon hoare  <graydon@pobox.com>

	* std_hooks.lua (get_http_proxy): Return nil when no ENV var.
	* monotone.texi (get_http_proxY): Document change.

2003-11-24  graydon hoare  <graydon@pobox.com>

	* tests/t_proxy.at: Add a test for proxying with tinyproxy.
	* testsuite.at: Call it.
	* lua.cc: Fix dumb error breaking proxying.
	* network.cc: Be verbose about proxying.

2003-11-23  graydon hoare  <graydon@pobox.com>

	* http_tasks.cc (read_chunk): Tolerate 0x20* after chunk len.

2003-11-23  graydon hoare  <graydon@pobox.com>

	* network.cc: Make more informative error policy.
	* boost/socket/socketstream.hpp: Pass SocketType to streambuf template.
	* boost/socket/src/default_socket_impl.cpp: Translate EINTR.

2003-11-22  graydon hoare  <graydon@pobox.com>

	* lua.cc, lua.hh (hook_get_http_proxy): New hook.
	* std_hooks.lua (get_http_proxy): Default uses HTTP_PROXY.
	(get_connect_addr): Undefine, it's for tunnels alone now.
	* network.cc: Use new hook.
	* http_tasks.hh, http_tasks.cc: Teach about proxies (sigh).
	* monotone.texi: Document new hooks.

2003-11-22  graydon hoare  <graydon@pobox.com>

	* lua.cc, lua.hh (hook_get_connect_addr): New hook.
	* std_hooks.lua (get_connect_addr): Default uses HTTP_PROXY.
	* network.cc, network.hh: Use new hook.
	* http_tasks.cc: Teach about HTTP/1.1.
	* cert.cc (bogus_cert_p): Fix UI ugly.

2003-11-21  graydon hoare  <graydon@pobox.com>

	* constants.hh (postsz): New constant for suggested post size.
	* database.cc, database.hh (queue*): Change db API slightly.
	* commands.cc (queue): Adjust to changed db API.
	* network.cc (post_queued_blobs_to_network): Switch to doing
	incremental posts.
	* cert.cc (write_rename_edge, read_rename_edge): Put files on 
	separate lines to accomodate future i18n work.
	* work.cc (add_to_attr_map, write_attr_map): Reorder fields to
	accomodate future i18n work.
	* monotone.texi: Document it.
	* configure.ac, NEWS: Mention 0.8 release.

	Release point (v 0.8).
	